<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/articleNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_name_placeholder_text_view"
        android:textSize="28sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/articleAuthorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_author_placeholder_text_view"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/articleNameTV"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/articleDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_date_placeholder_text_view"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/articleAuthorTV"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>