<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_demo_fragment">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/et_demo_fragment_shape"
        android:fontFamily="@font/josefin_sans_medium"
        android:hint="@string/fragment_login_email_edit_text"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/fragment_login_edit_text_text_color"
        android:textColorHint="@color/fragment_login_edit_text_text_color"
        app:layout_constraintBottom_toTopOf="@id/passwordET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/et_demo_fragment_shape"
        android:fontFamily="@font/josefin_sans_medium"
        android:hint="@string/fragment_login_password_edit_text"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/fragment_login_edit_text_text_color"
        android:textColorHint="@color/fragment_login_edit_text_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submitFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/fragment_login_edit_text_text_color"
        android:src="@drawable/ic_baseline_login_24"
        app:borderWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        app:shapeAppearanceOverlay="@style/shapeStyleFABSubmitLoginFragment"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/bahnschrift_medium"
        android:text="@string/fragment_login_log_in_text_view"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/emailET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>